# random-write

./: .gitignore  Cargo.toml  README.md  lol.txt
src/: lib.rs  main.rs  message.proto  message.rs  statics.rs  types.rs
