[package]
name = "rust-random-write"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[[bin]]
name = "random"
path = "src/main.rs"

[dependencies]
openssl-sys = "*"
quick-protobuf = "0.6.3"
reqwest = "0.9.18"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]