[package]
name = "rust-random-write"
version = "0.1.0"
authors = ["Salvador Guzman <guzmansalv@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'
incremental = false
overflow-checks = false

[[bin]]
name = "random"
path = "src/main.rs"

[dependencies]
quick-protobuf = "0.6.3"
serde = "1.0.91"
serde_json = "1.0.39"
ureq = { version = "0.10.0", features = ["json"] }